@@ -112,6 +112,7 @@ Please note that our support for the checkout block is still experimental and th
 * Add - WPCOM connection status event prop to 'wcpay_connect_account_clicked' track.
 * Add - Allow users to clear the account cache.
 * Update - Bump minimum supported version of WordPress from 5.3 to 5.4.
+* Add - Add a new admin note to collect qualitative feedback.
 
 = 2.2.0 - 2021-03-31 =
 * Fix - Paying with a saved card for a subscription with a free trial will now correctly save the chosen payment method to the order for future renewals.
